# fleetmux

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md  config.example.toml
src/: config.rs  doctor.rs  main.rs  model.rs  poller.rs  setup.rs  ssh.rs  tmux.rs  wizard.rs
src/ui/: dashboard.rs  mod.rs
