[package]
name = "fleetmux"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0"
crossterm = { version = "0.27", features = ["event-stream"] }
dialoguer = "0.11"
futures-util = "0.3"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
